--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <meta name="viewport" content="width=1440px, initial-scale=1.0, shrink-to-fit=no" />
     <title>Ugmonk</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -460,5 +460,6 @@
     </footer>
 
 </body>
+
 
 </html>
