--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1440px, initial-scale=1.0, shrink-to-fit=no" />
+    <style>
+        body {
+            min-width: 1440px;
+        }
+    </style>
     <title>Ugmonk</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -463,3 +468,4 @@
 
 
 </html>
+
