--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1440px, initial-scale=1.0, shrink-to-fit=no" />
+    <link type="image/x-icon" sizes="128x128" rel="icon" href="favicon.ico">
     <style>
         body {
+            margin: 0 auto;
             min-width: 1440px;
+            max-width: 1920px;
         }
     </style>
     <title>Ugmonk</title>
@@ -468,4 +471,5 @@
 
 
 </html>
+
 
